# clu-widget

./: .gitignore  LICENSE  README.md  clu.py  pyproject.toml
.github/workflows/: release.yml
clu/: __init__.py  __main__.py  widget.py
clu-menubar/: .gitignore  Package.swift  build.sh  generate-xcode-project.sh  project.yml
clu-menubar/CLUMenuBar/: CLUMenuBarApp.swift  Info.plist  SharedModels.swift
clu-menubar/CLUMenuBar.xcodeproj/: project.pbxproj
clu-menubar/CLUWidgetExtension/: CLUWidgetBundle.swift
clu_hardware/src/: main.cpp
vscode-extension/: package.json
vscode-extension/src/: panel.ts
