[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clu-widget"
version = "2.1.0"
description = "Claude Usage Monitor — terminal widget and dashboard for tracking Claude Code usage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "H. Santanna" },
]
keywords = ["claude", "anthropic", "usage", "monitor", "terminal", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/hsantanna88/clu-widget"
Repository = "https://github.com/hsantanna88/clu-widget"
Issues = "https://github.com/hsantanna88/clu-widget/issues"

[project.scripts]
clu = "clu:main"

[tool.setuptools]
py-modules = ["clu"]
