[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clu-widget"
version = "2.4.1"
description = "Claude Usage Monitor — terminal widget and dashboard for tracking Claude Code usage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"  # python 3.9+
authors = [
    { name = "H. Santanna" },
]
keywords = ["claude", "anthropic", "usage", "monitor", "terminal", "widget", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
    "requests>=2.28",
    "cloudscraper>=1.2",
]

[project.urls]
Homepage = "https://github.com/hugosantanna/clu-widget"
Repository = "https://github.com/hugosantanna/clu-widget"
Issues = "https://github.com/hugosantanna/clu-widget/issues"

[project.scripts]
clu = "clu:main"

[tool.setuptools]
py-modules = ["clu"]
